# SmallGameFramewok

./: .clang-format  .gitignore  CMakeLists.txt
sandbox/: CMakeLists.txt  main.cpp  sandbox.cpp  scene.hpp
source/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/inc/SmallGameFramework/common/: component_concept.hpp  gui_element_concept.hpp  logger.hpp  scene_interface.hpp  vector2.hpp
source/common/src/: logger.cpp
source/core/: CMakeLists.txt
source/core/inc/SmallGameFramework/core/: base.hpp  scene_manager.hpp
source/core/src/: base.cpp  main.cpp  scene_manager.cpp
